--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog using Bootstrap</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
 </head>
 
 <body class="bg-secondary">
@@ -170,22 +170,32 @@
     <div class="container mb-4">
         <div class="row">
             <div class="col-12 col-lg bg-white p-3 rounded-5">
-                <h2>Contact Form</h2>
-            <form action="">
-                <div class="form-group">
-                    <label for="">Email </label>
-                    <input type="email" name="" id="" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="">Name</label>
-                    <input type="text" name="" id="" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="">Message</label>
-                    <textarea name="" id="" class="form-control"></textarea>
-                </div>
-                <button class="btn btn-primary rounded-5 my-2">Submit</button>
-            </form>
+            <h2>Contact Form</h2>
+
+            <form action="https://formspree.io/f/xldpnqzr" method="POST" id="contactForm">
+    <div class="form-group mb-2">
+        <label>Name</label>
+        <input type="text" name="name" class="form-control" required>
+    </div>
+
+    <div class="form-group mb-2">
+        <label>Email</label>
+        <input type="email" name="email" class="form-control" required>
+    </div>
+
+    <div class="form-group mb-2">
+        <label>Message</label>
+        <textarea name="message" class="form-control" required></textarea>
+    </div>
+
+    <button type="submit" class="btn btn-primary rounded-5 my-2">Submit</button>
+
+    <!-- Success / Error messages -->
+    <div id="formStatus" class="mt-2"></div>
+</form>
+
+
+
             </div>
         </div>
     </div>
@@ -204,6 +214,34 @@
         </div>
     </div>
 </footer>
+
+<script>
+  const form = document.getElementById("contactForm");
+  const statusDiv = document.getElementById("formStatus");
+
+  form.addEventListener("submit", async function(event) {
+    event.preventDefault();
+
+    const data = new FormData(form);
+    try {
+      const response = await fetch(form.action, {
+        method: form.method,
+        body: data,
+        headers: { 'Accept': 'application/json' }
+      });
+
+      if (response.ok) {
+        statusDiv.innerHTML = '<div class="alert alert-success">✅ Message sent successfully!</div>';
+        form.reset();
+      } else {
+        statusDiv.innerHTML = '<div class="alert alert-danger">❌ Failed to send message. Please try again.</div>';
+      }
+    } catch (error) {
+      statusDiv.innerHTML = '<div class="alert alert-warning">⚠️ Error: ' + error.message + '</div>';
+    }
+  });
+</script>
+
 
 </body>
 </html>
